# primordial

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/hooks/: auto-commit.ps1  auto-commit.sh
.claude/skills/run-simulation/: SKILL.md
clips/: clip_session_1772202488_0.json  stats_session_1772202488.json  stats_session_1772202605.json  stats_session_1772203805.json  stats_session_1772204566.json  stats_session_1772206452.json
primordial/: __init__.py  body.py  brain.py  config.py  engine.py  evolution.py  genome.py  organism.py  recorder.py  world.py
scripts/: export_full.py  export_narrative.py  export_part2.py  export_timeline.py  export_web_clip.py  run.py  visualize.py
